--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource/comic-neue": "^4.5.9",
     "astro": "^1.1.7"
+  },
+  "devDependencies": {
+    "@astrojs/solid-js": "^1.1.0",
+    "@astrojs/tailwind": "^1.0.0",
+    "solid-js": "^1.5.4",
+    "tailwindcss": "^3.1.8"
   }
 }
