place Admin mail and password in .env

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 ## Directus
 ## See https://docs.directus.io/self-hosted/config-options.html
+ADMIN_EMAIL: 'jonas.voisard@gmail.com'
+ADMIN_PASSWORD: '12341234'
 DIRECTUS_KEY="ebe06ad0-b070-4336-abfd-dafadc8b9996"
 DIRECTUS_SECRET="5rVndt7Zh1689VA9_Nq9Sfw96yk1TlKo"
 
