--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,17 @@
 ## Directus
 ## See https://docs.directus.io/self-hosted/config-options.html
-ADMIN_EMAIL: 'jonas.voisard@gmail.com'
-ADMIN_PASSWORD: '12341234'
-DIRECTUS_KEY="ebe06ad0-b070-4336-abfd-dafadc8b9996"
-DIRECTUS_SECRET="5rVndt7Zh1689VA9_Nq9Sfw96yk1TlKo"
+ADMIN_EMAIL="jonas.voisard@gmail.com"
+ADMIN_PASSWORD="12341234"
+KEY="ebe06ad0-b070-4336-abfd-dafadc8b9996"
+SECRET="5rVndt7Zh1689VA9_Nq9Sfw96yk1TlKo"
+DB_CLIENT="sqlite3"
+DB_FILENAME="./data/db.sqlite"
 
 ## Postgres
-POSTGRES_PASSWORD="prout"
+# DB_CLIENT="pg"
+# DB_HOST="database"
+# DB_PORT="5432"
+# DB_DATABASE="directus"
+# DB_USER="directus"
+# POSTGRES_PASSWORD="prout"
+
