--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.7'
 
 services:
   app:
+    container_name: dubs
     image: node:16-alpine
     command: sh -c "yarn install & yarn run dev"
     ports:
@@ -22,8 +23,8 @@ services:
     networks:
       - dubs-network
     environment:
-      POSTGRES_DB: 'directus'
-      POSTGRES_USER: 'directus'
+      POSTGRES_DB: '${DB_DATABASE}'
+      POSTGRES_USER: '${DB_USER}'
       POSTGRES_PASSWORD: '${POSTGRES_PASSWORD}'
 
   directus:
@@ -41,11 +42,11 @@ services:
       KEY: '${DIRECTUS_KEY}'
       SECRET: '${DIRECTUS_SECRET}'
 
-      DB_CLIENT: 'pg'
-      DB_HOST: 'database'
-      DB_PORT: '5432'
-      DB_DATABASE: 'directus'
-      DB_USER: 'directus'
+      DB_CLIENT: '${DB_CLIENT}'
+      DB_HOST: '${DB_HOST}'
+      DB_PORT: '${DB_PORT}'
+      DB_DATABASE: '${DB_DATABASE}'
+      DB_USER: '${DB_USER}'
       DB_PASSWORD: '${POSTGRES_PASSWORD}'
 
       ADMIN_EMAIL: '${ADMIN_EMAIL}'
