--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev --host",
-    "build": "astro build",
+    "dev": "run-p astro-dev directus",
+    "build": "run-p astro-build directus-snapshot",
+    "astro": "astro",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro-dev": "astro dev --host",
+    "astro-build": "astro build",
+    "directus": "directus start",
+    "directus-init": "directus bootstrap && directus schema apply --yes ./snapshot.yaml",
+    "directus-snapshot": "directus schema snapshot --yes ./snapshot.yaml"
   },
   "dependencies": {
     "@fontsource/comic-neue": "^4.5.9",
-    "astro": "^1.1.7"
+    "astro": "^1.1.7",
+    "directus": "^9.17.4",
+    "npm-run-all": "^4.1.5",
+    "sharp": "^0.31.0"
   },
   "devDependencies": {
     "@astrojs/solid-js": "^1.1.0",
