--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@example/basics",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "run-p astro-dev directus",
     "build": "run-p astro-build directus-snapshot",
@@ -14,11 +15,13 @@
     "directus-snapshot": "directus schema snapshot --yes ./snapshot.yaml"
   },
   "dependencies": {
+    "@astrojs/node": "^1.0.1",
+    "@directus/sdk": "^10.1.4",
     "@fontsource/comic-neue": "^4.5.9",
     "astro": "^1.1.7",
     "directus": "^9.17.4",
-    "npm-run-all": "^4.1.5",
-    "sharp": "^0.31.0"
+    "express": "^4.18.1",
+    "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
     "@astrojs/solid-js": "^1.1.0",
