--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "$lib*": ["./src/lib*"],
-      "$layouts*": ["./src/layouts*"],
-      "$pages*": ["./src/pages*"]
+      "$src/*": ["./src/*"],
+      "$types/*": ["./src/types/*"],
+      "$lib/*": ["./src/lib/*"],
+      "$layouts/*": ["./src/layouts/*"],
+      "$pages/*": ["./src/pages/*"]
     }
   }
 }
