--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
-          envs:
+          env:
             DB_FILENAME: ../data/db.sqlite
             STORAGE_LOCAL_ROOT: ../uploads
             ADMIN_EMAIL: jonas.voisard@gmail.com
