--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,15 +62,16 @@ jobs:
 
       - name: Install npm dependencies and restart server
         uses: appleboy/ssh-action@master
+        env:
+          DB_FILENAME: ../data/db.sqlite
+          STORAGE_LOCAL_ROOT: ../uploads
+          ADMIN_EMAIL: jonas.voisard@gmail.com
+          ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD  }}
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
-          env:
-            DB_FILENAME: ../data/db.sqlite
-            STORAGE_LOCAL_ROOT: ../uploads
-            ADMIN_EMAIL: jonas.voisard@gmail.com
-            ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD  }}
+          envs: DB_FILENAME,STORAGE_LOCAL_ROOT,ADMIN_EMAIL,ADMIN_PASSWORD
           script: |
             . .profile
             cd ~/sites/dubs-apiculture.ch/app
