--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Upload client artifact
         uses: actions/upload-artifact@v3
         with:
-          name: app
+          name: dubs-app
           path: |
             dist
             package.json
@@ -33,7 +33,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Download artifact server
+      - name: Download artifact
         uses: actions/download-artifact@v3
         with:
           name: dubs-app
