--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,17 +48,15 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           source: ./dubs-app
-          target: ./tmp
+          target: ~/sites/dubs-apiculture.ch/app
 
-      - name: Replace old app
+      - name: Ensure data folders
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
-            rm -rf ~/sites/dubs-apiculture.ch/app
-            mv ~/tmp/app ~/sites/dubs-apiculture.ch/app
             mkdir -p ~/sites/dubs-apiculture.ch/data
             mkdir -p ~/sites/dubs-apiculture.ch/uploads
 
