--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,4 +71,5 @@ jobs:
           script: |
             . .profile
             cd ~/dubs/app
-            node server.js
+            npm install
+            pm2 startOrRestart server.js --name dubs
