--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "astro preview",
     "astro-dev": "astro dev --host",
     "astro-build": "astro build",
-    "astro-serve": "node server.js",
+    "astro-serve": "pm2",
     "astro-telemetry-disable": "astro telemetry disable",
     "directus": "directus start",
     "directus-init": "directus bootstrap && directus schema apply --yes ./snapshot.yaml",
@@ -24,7 +24,8 @@
     "astro": "^1.1.7",
     "directus": "^9.17.4",
     "express": "^4.18.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "pm2": "^5.2.0"
   },
   "devDependencies": {
     "@astrojs/solid-js": "^1.1.0",
