--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Download artifact dist
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: ./
+
       - name: Copy source on host
         uses: appleboy/scp-action@master
         with:
@@ -49,12 +55,6 @@ jobs:
             mkdir -p ~/dubs/uploads
             rm -rf ~/dubs/app
             mv ~/dubs/tmp ~/dubs/app
-
-      - name: Download artifact dist
-        uses: actions/download-artifact@v3
-        with:
-          name: dist
-          path: ~/dubs/app
 
       - name: Install dependencies, build and restart server
         uses: appleboy/ssh-action@master
