--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@astrojs/node": "^1.0.1",
     "@directus/sdk": "^10.1.4",
-    "@fontsource/comic-neue": "^4.5.9",
+    "@fontsource/open-sans": "^4.5.11",
     "astro": "^1.1.7",
     "directus": "^9.17.4",
     "express": "^4.18.1",
