--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "directus": "^9.17.4",
     "express": "^4.18.1",
     "npm-run-all": "^4.1.5",
-    "pm2": "^5.2.0"
+    "pm2": "^5.2.0",
+    "solid-js": "^1.5.4"
   },
   "devDependencies": {
     "@astrojs/solid-js": "^1.1.0",
