--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "express": "^4.18.1",
     "npm-run-all": "^4.1.5",
     "pm2": "^5.2.0",
-    "solid-js": "^1.5.4"
+    "rxjs": "^7.5.6",
+    "solid-js": "^1.5.4",
+    "solid-transition-group": "^0.0.11"
   },
   "devDependencies": {
     "@astrojs/solid-js": "^1.1.0",
