try implement payload

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,1 @@
-## Directus
-## See https://docs.directus.io/self-hosted/config-options.html
-ADMIN_EMAIL="jonas.voisard@gmail.com"
-ADMIN_PASSWORD="12341234"
-KEY="ebe06ad0-b070-4336-abfd-dafadc8b9996"
-SECRET="5rVndt7Zh1689VA9_Nq9Sfw96yk1TlKo"
-DB_CLIENT="sqlite3"
-DB_FILENAME="./data/db.sqlite"
-
-## Postgres
-# DB_CLIENT="pg"
-# DB_HOST="database"
-# DB_PORT="5432"
-# DB_DATABASE="directus"
-# DB_USER="directus"
-# POSTGRES_PASSWORD="prout"
-
+PAYLOAD_SECRET=90780b0a4a0f3303d960ae55
