--- a/package.json
+++ b/package.json
@@ -4,28 +4,24 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "run-p astro-dev directus",
-    "build": "run-p astro-build directus-init",
-    "serve": "run-p directus astro-serve",
-    "astro": "astro",
-    "preview": "astro preview",
-    "astro-dev": "astro dev --host",
-    "astro-build": "astro build",
-    "astro-serve": "pm2 startOrReload ecosystem.config.cjs --update-env",
-    "astro-telemetry-disable": "astro telemetry disable",
-    "directus": "directus start",
-    "directus-init": "directus bootstrap && directus schema apply --yes ./snapshot.yaml",
-    "directus-snapshot": "directus schema snapshot --yes ./snapshot.yaml"
+    "dev": "run-p dev:*",
+    "dev:astro": "astro dev --host",
+    "dev:payload": "pm2-dev src/server.js",
+    "build": "run-p build:*",
+    "build:astro": "astro build",
+    "serve": "pm2 startOrReload ecosystem.config.cjs --update-env",
+    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types"
   },
   "dependencies": {
     "@astrojs/node": "^1.0.1",
-    "@directus/sdk": "^10.1.4",
     "@fontsource/dosis": "^4.5.9",
     "@mdi/js": "^7.0.96",
     "astro": "^1.1.7",
-    "directus": "^9.17.4",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "npm-run-all": "^4.1.5",
+    "payload": "^1.1.14",
     "pm2": "^5.2.0",
     "rxjs": "^7.5.6",
     "solid-js": "^1.5.4",
@@ -34,6 +30,7 @@
   "devDependencies": {
     "@astrojs/solid-js": "^1.1.0",
     "@astrojs/tailwind": "^1.0.0",
+    "@types/express": "^4.17.14",
     "tailwindcss": "^3.1.8"
   }
 }
