--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "$types/*": ["./src/types/*"],
       "$lib/*": ["./src/lib/*"],
       "$layouts/*": ["./src/layouts/*"],
-      "$pages/*": ["./src/pages/*"]
+      "$pages/*": ["./src/pages/*"],
+      "$models/*": ["./src/models/*"]
     },
     "jsx": "preserve",
     "jsxImportSource": "solid-js"
