--- a/package.json
+++ b/package.json
@@ -1,36 +1,29 @@
 {
-  "name": "@example/basics",
-  "version": "0.0.1",
-  "private": true,
-  "type": "module",
+  "name": "dubs",
+  "version": "1.0.0",
+  "main": "dist/server.js",
+  "license": "MIT",
   "scripts": {
-    "dev": "run-p dev:*",
-    "dev:astro": "astro dev --host",
-    "dev:payload": "pm2-dev src/server.js",
-    "build": "run-p build:*",
-    "build:astro": "astro build",
-    "serve": "pm2 startOrReload ecosystem.config.cjs --update-env",
-    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types"
+    "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
+    "build:payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build",
+    "build:server": "tsc",
+    "build": "yarn copyfiles && yarn build:payload && yarn build:server",
+    "serve": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production node dist/server.js",
+    "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png}\" dist/",
+    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
+    "generate:graphQLSchema": "PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:graphQLSchema"
   },
   "dependencies": {
-    "@astrojs/node": "^1.0.1",
-    "@fontsource/dosis": "^4.5.9",
-    "@mdi/js": "^7.0.96",
-    "astro": "^1.1.7",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.1",
-    "npm-run-all": "^4.1.5",
-    "payload": "^1.1.14",
-    "pm2": "^5.2.0",
-    "rxjs": "^7.5.6",
-    "solid-js": "^1.5.4",
-    "solid-transition-group": "^0.0.11"
+    "payload": "^1.1.15",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "@astrojs/solid-js": "^1.1.0",
-    "@astrojs/tailwind": "^1.0.0",
-    "@types/express": "^4.17.14",
-    "tailwindcss": "^3.1.8"
+    "@types/express": "^4.17.9",
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.6",
+    "ts-node": "^9.1.1",
+    "copyfiles": "^2.4.1",
+    "typescript": "^4.1.3"
   }
 }
