--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
   "name": "dubs",
   "version": "1.0.0",
-  "main": "dist/server.js",
-  "license": "MIT",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
-    "build:payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build",
-    "build:server": "tsc",
-    "build": "yarn copyfiles && yarn build:payload && yarn build:server",
-    "serve": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production node dist/server.js",
-    "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png}\" dist/",
-    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
-    "generate:graphQLSchema": "PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:graphQLSchema"
+    "dev": "run-p install:*",
+    "install:site": "cd site && npm i",
+    "install:backend": "cd backend && npm i"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PeufOne/dubs.git"
+  },
+  "author": "Jonas",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/PeufOne/dubs/issues"
+  },
+  "homepage": "https://github.com/PeufOne/dubs#readme",
   "dependencies": {
-    "payload": "^1.1.15",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.9",
-    "cross-env": "^7.0.3",
-    "nodemon": "^2.0.6",
-    "ts-node": "^9.1.1",
-    "copyfiles": "^2.4.1",
-    "typescript": "^4.1.3"
+    "dubs-backend": "file:backend",
+    "dubs-site": "file:site",
+    "npm-run-all": "^4.1.5"
   }
 }
