--- a/site/package.json
+++ b/site/package.json
@@ -4,13 +4,18 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
+    "dev": "astro dev --host",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.5.0"
+    "@astrojs/node": "^2.0.0",
+    "@astrojs/solid-js": "^1.2.0",
+    "@astrojs/tailwind": "^2.1.0",
+    "@fontsource/dosis": "^4.5.10",
+    "astro": "^1.5.0",
+    "solid-js": "^1.5.7",
+    "tailwindcss": "^3.1.8"
   }
 }
