--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "run-p dev:*",
     "dev:site": "cd site && npm run dev",
-    "dev:backend": "cd backend && npm run dev"
+    "dev:backend": "cd backend && npm run dev",
+    "postinstall": "run-s install:*",
+    "install:site": "cd site && npm i",
+    "install:backend": "cd backend && npm i"
   },
   "repository": {
     "type": "git",
@@ -19,8 +22,6 @@
   },
   "homepage": "https://github.com/PeufOne/dubs#readme",
   "dependencies": {
-    "dubs-backend": "file:backend",
-    "dubs-site": "file:site",
     "npm-run-all": "^4.1.5"
   }
 }
