astro + payload work in dev

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:backend": "cd backend && npm run dev",
     "postinstall": "run-s install:*",
     "install:site": "cd site && npm i",
-    "install:backend": "cd backend && npm i"
+    "install:backend": "cd backend && npm i",
+    "types": "cd backend && npm run generate:types"
   },
   "repository": {
     "type": "git",
