--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   },
   "homepage": "https://github.com/PeufOne/dubs#readme",
   "dependencies": {
+    "leaflet": "^1.9.2",
     "npm-run-all": "^4.1.5"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.0"
   }
 }
