--- a/site/package.json
+++ b/site/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^2.1.0",
     "@fontsource/dosis": "^4.5.10",
     "astro": "^1.5.0",
+    "mermaid": "^9.2.0",
     "solid-js": "^1.5.7",
     "tailwindcss": "^3.1.8"
   }
