--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postinstall": "run-s install:*",
     "install:site": "cd site && npm i",
     "install:backend": "cd backend && npm i",
-    "types": "cd backend && npm run generate:types"
+    "types": "cd backend && npm run generate:types",
+    "test": "ts-node scripts/generateAPI.ts"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,8 @@
   "homepage": "https://github.com/PeufOne/dubs#readme",
   "dependencies": {
     "npm-run-all": "^4.1.5"
+  },
+  "devDependencies": {
+    "@types/qs": "^6.9.7"
   }
 }
