--- a/site/package.json
+++ b/site/package.json
@@ -12,12 +12,19 @@
   "dependencies": {
     "@astrojs/node": "^2.0.0",
     "@astrojs/solid-js": "^1.2.0",
+    "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^2.1.0",
     "@fontsource/dosis": "^4.5.10",
+    "@mdi/js": "^7.0.96",
     "astro": "^1.5.0",
+    "debounce": "^1.2.1",
     "mermaid": "^9.2.0",
     "qs": "^6.11.0",
     "solid-js": "^1.5.7",
+    "svelte": "^3.52.0",
     "tailwindcss": "^3.1.8"
+  },
+  "devDependencies": {
+    "@types/debounce": "^1.2.1"
   }
 }
