--- a/site/package.json
+++ b/site/package.json
@@ -18,13 +18,16 @@
     "@mdi/js": "^7.0.96",
     "astro": "^1.5.0",
     "debounce": "^1.2.1",
+    "escape-html": "^1.0.3",
     "mermaid": "^9.2.0",
     "qs": "^6.11.0",
+    "slate": "^0.85.0",
     "solid-js": "^1.5.7",
     "svelte": "^3.52.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "@types/debounce": "^1.2.1"
+    "@types/debounce": "^1.2.1",
+    "@types/escape-html": "^1.0.2"
   }
 }
