--- a/site/package.json
+++ b/site/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^2.1.0",
     "@fontsource/dosis": "^4.5.10",
     "@mdi/js": "^7.0.96",
+    "@types/qs": "^6.9.7",
     "astro": "^1.5.0",
     "debounce": "^1.2.1",
     "escape-html": "^1.0.3",
