--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -13,6 +13,7 @@
       "$material/*": ["./src/material/*"]
     },
     "jsx": "preserve",
-    "jsxImportSource": "solid-js"
+    "jsxImportSource": "solid-js",
+    "importsNotUsedAsValues": "error"
   }
 }
