--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -3,7 +3,7 @@
     "rootDirs": ["./src", "../"],
     "baseUrl": ".",
     "paths": {
-      "types": ["../types"]
+      "types": ["../old/types"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
