--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "site",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite dev --host",
     "build": "vite build",
@@ -12,6 +13,8 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^1.0.0",
     "@sveltejs/kit": "^1.0.0",
+    "@types/debounce": "^1.2.1",
+    "@types/escape-html": "^1.0.2",
     "svelte": "^3.54.0",
     "svelte-check": "^2.9.2",
     "tailwindcss": "^3.2.4",
@@ -19,9 +22,13 @@
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   },
-  "type": "module",
   "dependencies": {
+    "@mdi/js": "^7.1.96",
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20"
+    "debounce": "^1.2.1",
+    "escape-html": "^1.0.3",
+    "postcss": "^8.4.20",
+    "qs": "^6.11.0",
+    "slate": "^0.87.0"
   }
 }
