--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@sveltejs/kit": "^1.0.0",
     "@types/debounce": "^1.2.1",
     "@types/escape-html": "^1.0.2",
+    "@types/qs": "^6.9.7",
     "svelte": "^3.54.0",
     "svelte-check": "^2.9.2",
     "tailwindcss": "^3.2.4",
