--- a/backend/package.json
+++ b/backend/package.json
@@ -14,15 +14,17 @@
     "graphQLSchema": "PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:graphQLSchema"
   },
   "dependencies": {
+    "deep-equal": "^2.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.3",
     "leaflet": "^1.9.2",
     "npm-run-all": "^4.1.5",
-    "payload": "^1.4.1",
+    "payload": "^1.5.4",
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "@types/deep-equal": "^1.0.1",
     "@types/express": "^4.17.9",
     "@types/leaflet": "^1.9.0",
     "cross-env": "^7.0.3",
