--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/deep-equal": "^1.0.1",
     "@types/express": "^4.17.9",
+    "@types/express-http-proxy": "^1.6.3",
     "@types/leaflet": "^1.9.0",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.6",
