Use id to correct match relation

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,5 @@
+media
+
 ### Node ###
 # Logs
 logs
@@ -164,3 +166,4 @@ dist
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode
+
