--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "build": "run-s build:*",
     "build:server": "tsc",
     "build:payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build",
-    "serve": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production node dist/server.js",
+    "serve": "cross-env PAYLOAD_CONFIG_PATH=build/backend/src/payload.config.js NODE_ENV=production node build/backend/src/server.js",
     "types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
     "graphQLSchema": "PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:graphQLSchema"
   },
