--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,11 @@
     "dev": "vite dev --host",
     "build": "vite build",
     "preview": "vite preview --host",
+    "serve": "node build/index.js",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^1.0.0",
     "@sveltejs/kit": "^1.0.11",
     "@types/debounce": "^1.2.1",
     "@types/escape-html": "^1.0.2",
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@mdi/js": "^7.1.96",
+    "@sveltejs/adapter-node": "^1.1.4",
     "autoprefixer": "^10.4.13",
     "debounce": "^1.2.1",
     "escape-html": "^1.0.3",
