--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           source: ./
           target: ~/dubs/tmp
 
-      - name: Replace old application
+      - name: Replace and restart application
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -40,5 +40,4 @@ jobs:
             rm -rf ~/dubs/app
             mv ~/dubs/tmp ~/dubs/app
             cp ~/dubs/.env ~/dubs/backend/.env
-
-      - run: pnpm run -r serve
+            pnpm start
