fix copy path .env

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,5 @@ jobs:
             mkdir -p ~/dubs/media
             rm -rf ~/dubs/app
             mv ~/dubs/tmp ~/dubs/app
-            cp ~/dubs/.env ~/dubs/backend/.env
+            cp ~/dubs/.env ~/dubs/app/backend/.env
             pnpm start
