--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
+            . .profile
             mkdir -p ~/dubs/media
             rm -rf ~/dubs/app
             mv ~/dubs/tmp ~/dubs/app
