--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "build": "run-s build:*",
     "build:server": "tsc",
     "build:payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build",
-    "serve": "cross-env PAYLOAD_CONFIG_PATH=build/backend/src/payload.config.js NODE_ENV=production node build/backend/src/server.js",
+    "serve": "pm2 startOrRestart ./ecosystem.config.js",
     "types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
     "graphQLSchema": "PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:graphQLSchema"
   },
@@ -21,6 +21,7 @@
     "leaflet": "^1.9.2",
     "npm-run-all": "^4.1.5",
     "payload": "^1.5.4",
+    "pm2": "^5.2.2",
     "react": "^18.2.0"
   },
   "devDependencies": {
