--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite dev --host",
     "build": "vite build",
     "preview": "vite preview --host",
-    "serve": "node build/index.js",
+    "serve": "pm2 startOrRestart ./ecosystem.config.cjs",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
@@ -29,6 +29,7 @@
     "autoprefixer": "^10.4.13",
     "debounce": "^1.2.1",
     "escape-html": "^1.0.3",
+    "pm2": "^5.2.2",
     "postcss": "^8.4.20",
     "qs": "^6.11.0",
     "slate": "^0.87.0"
