--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "graphQLSchema": "PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:graphQLSchema"
   },
   "dependencies": {
+    "@mdi/js": "^7.1.96",
     "deep-equal": "^2.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
