--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "pm2": "^5.2.2",
     "postcss": "^8.4.20",
     "qs": "^6.11.0",
-    "slate": "^0.87.0"
+    "slate": "^0.87.0",
+    "vite-imagetools": "^4.0.18"
   }
 }
