--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "debounce": "^1.2.1",
     "dotenv": "^8.2.0",
     "escape-html": "^1.0.3",
+    "oauth4webapi": "^2.1.0",
     "pm2": "^5.2.2",
     "postcss": "^8.4.20",
     "qs": "^6.11.0",
