Add / delete item in shopping cart

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,6 +11,7 @@
     "strict": true,
     "paths": {
       "types": ["../types"],
+      "common": ["../common"],
       "$lib": ["src/lib"],
       "$lib/*": ["./src/lib/*"]
     }
