--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,5 @@
 MONGODB_URL=mongodb://localhost/dubs
 PAYLOAD_SECRET=not-safe-in-production
+SMTP_HOST=mail.com
+SMTP_USER=user@domain.ch
+SMTP_PASS=not-safe-in-production
