--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,10 @@ on:
         required: true
       SSH_PASSWORD:
         required: true
+      PAYLOAD_SECRET:
+        required: true
+      # SMTP_PASS:
+      #  required: true
 
 jobs:
   build:
@@ -46,16 +50,15 @@ jobs:
         uses: appleboy/ssh-action@master
         env:
           PAYLOAD_SECRET: ${{ secrets.PAYLOAD_SECRET }}
-          SMTP_PASS: ${{ secrets.SMTP_PASS }}
           AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
+          # SMTP_PASS: ${{ secrets.SMTP_PASS }}
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
-          envs: PAYLAOD_SECRET,SMTP_PASS,AUTH_SECRET
+          envs: PAYLAOD_SECRET,AUTH_SECRET
           script: |
-            . .profile
-            echo $SMTP_PASS
+            . ~/dubs/.profile
             rm -rf ~/dubs/app
             mv ~/dubs/tmp ~/dubs/app
             cd ~/dubs/app
