--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,7 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           envs: PAYLAOD_SECRET,AUTH_SECRET
           script: |
+            . .profile
             . ~/dubs/.profile
             rm -rf ~/dubs/app
             mv ~/dubs/tmp ~/dubs/app
