--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "slate": "^0.87.0",
     "svelte": "^3.57.0",
     "svelte-check": "^3.1.4",
+    "svelte-notifications": "^0.9.98",
     "vite-imagetools": "^4.0.18",
     "zod": "^3.20.6"
   }
