--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "dubs-backend",
   "description": "Simple to-do list example",
   "version": "1.0.0",
-  "main": "dist/server.js",
+  "main": "dist/server.prod.js",
   "license": "MIT",
   "scripts": {
     "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
@@ -21,7 +21,7 @@
     "express-http-proxy": "^1.6.3",
     "leaflet": "^1.9.2",
     "npm-run-all": "^4.1.5",
-    "payload": "^1.6.26",
+    "payload": "^1.7.5",
     "pm2": "^5.2.2",
     "react": "^18.2.0"
   },
