--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,7 +7,7 @@
       "types": ["../types"],
       "common": ["../common"]
     },
-    "target": "es5",
+    "target": "ES5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "strict": false,
@@ -15,6 +15,7 @@
     "skipLibCheck": true,
     "jsx": "react"
   },
+
   "include": ["src"],
   "exclude": ["node_modules", "dist", "build"],
   "ts-node": {
