--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "npm-run-all": "^4.1.5",
     "payload": "^1.7.5",
     "pm2": "^5.2.2",
+    "process": "^0.11.10",
     "react": "^18.2.0"
   },
   "devDependencies": {
