--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+SERVER_URL=https://dubs-apiculture.ch
 PAYLOAD_SECRET=not-safe-in-production
 SMTP_PASS=not-safe-in-production
 AUTH_SECRET=not-safe-in-production
