--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+# backend
+FRONT_URL=http://localhost:5173
+MONGODB_URL=mongodb://localhost/dubs
 PAYLOAD_SECRET=not-safe-in-production
 SMTP_PASS=not-safe-in-production
+
+# frontend
 AUTH_SECRET=not-safe-in-production
