--- a/backend/package.json
+++ b/backend/package.json
@@ -1,38 +1,44 @@
 {
-  "name": "dubs-backend",
-  "description": "Simple to-do list example",
+  "name": "payload",
+  "description": "A blank template to get started with Payload",
   "version": "1.0.0",
-  "main": "dist/server.prod.js",
+  "main": "dist/server.js",
   "license": "MIT",
   "scripts": {
     "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
     "build": "run-s build:*",
-    "build:server": "tsc",
     "build:payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build",
+    "build:server": "tsc",
     "serve": "pm2 startOrRestart --update-env ./ecosystem.config.js",
-    "types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
-    "graphQLSchema": "PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:graphQLSchema"
+    "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png}\" dist/",
+    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
+    "generate:graphQLSchema": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:graphQLSchema",
+    "payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload"
   },
   "dependencies": {
     "@mdi/js": "^7.1.96",
+    "@payloadcms/bundler-webpack": "^1.0.0",
+    "@payloadcms/db-mongodb": "^1.0.0",
+    "@payloadcms/plugin-cloud": "^2.0.0",
+    "@payloadcms/richtext-slate": "^1.0.0",
+    "@types/deep-equal": "^1.0.1",
+    "@types/express-http-proxy": "^1.6.3",
+    "@types/leaflet": "^1.9.0",
+    "cross-env": "^7.0.3",
     "deep-equal": "^2.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.3",
     "leaflet": "^1.9.2",
-    "npm-run-all": "^4.1.5",
-    "payload": "^1.15.6",
-    "pm2": "^5.2.2",
+    "payload": "^2.0.0",
     "react": "^18.2.0"
   },
   "devDependencies": {
-    "@types/deep-equal": "^1.0.1",
     "@types/express": "^4.17.9",
-    "@types/express-http-proxy": "^1.6.3",
-    "@types/leaflet": "^1.9.0",
-    "cross-env": "^7.0.3",
-    "nodemon": "^2.0.6",
+    "copyfiles": "^2.4.1",
+    "nodemon": "^2.0.20",
+    "npm-run-all": "^4.1.5",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.8.4"
   }
 }
