--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,24 +1,23 @@
 {
   "compilerOptions": {
     "rootDirs": ["./src", "../types", "../common"],
-    "outDir": "./build",
-    "baseUrl": ".",
-    "paths": {
-      "types": ["../types"],
-      "common": ["../common"]
-    },
-    "target": "ES5",
+    "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "strict": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "jsx": "react"
+    "outDir": "./build",
+    "jsx": "react",
+    "paths": {
+      "types": ["../types"],
+      "common": ["../common"]
+    }
   },
-
   "include": ["src"],
   "exclude": ["node_modules", "dist", "build"],
   "ts-node": {
-    "transpileOnly": true
+    "transpileOnly": true,
+    "swc": true
   }
 }
