--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 FRONT_URL=http://localhost:5173
 MONGODB_URL=mongodb://localhost/dubs
 PAYLOAD_SECRET=not-safe-in-production
+SMTP_HOST=smtp.hostinger.com
+SMTP_USER=info@dubs-apiculture.ch
 SMTP_PASS=not-safe-in-production
 
 # frontend
