--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-# backend
-FRONT_URL=http://localhost:5173
-MONGODB_URL=mongodb://localhost/dubs
-PAYLOAD_SECRET=not-safe-in-production
+PUBLIC_BACKEND_PORT=5000
+FRONT_URL=http://localhost:3000
+MONGODB_URL=mongodb://0.0.0.0/dubs
+PAYLOAD_CONFIG_PATH=./build/backend/src/payload.config.js
 SMTP_HOST=smtp.hostinger.com
 SMTP_USER=info@dubs-apiculture.ch
-SMTP_PASS=not-safe-in-production
 
-# frontend
-AUTH_SECRET=not-safe-in-production
+PAYLOAD_SECRET=your-random-string
+SMTP_PASS=your-random-pass
+MEDIA_DIR=./media
