--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,9 @@
   "name": "payload",
   "description": "A blank template to get started with Payload",
   "version": "1.0.0",
-  "main": "dist/server.js",
   "license": "MIT",
   "scripts": {
+    "start": "node --env-file=../.env ./build/backend/src/server.js",
     "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
     "build": "run-s build:*",
     "build:payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build",
