--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "start": "NODE_ENV=production node --env-file=../.env ./build/index.js",
     "dev": "vite dev --host",
     "build": "vite build",
     "preview": "vite preview --host",
@@ -18,14 +19,14 @@
     "tailwindcss": "^3.4.17",
     "tslib": "^2.8.1",
     "typescript": "^4.9.5",
-    "vite": "^4.5.14"
+    "vite": "^7.1.4"
   },
   "dependencies": {
     "@auth/core": "^0.5.1",
-    "@auth/sveltekit": "^0.3.16",
     "@mdi/js": "^7.4.47",
-    "@sveltejs/adapter-node": "^1.3.1",
-    "@sveltejs/kit": "^1.30.4",
+    "@sveltejs/adapter-node": "^5.3.1",
+    "@sveltejs/kit": "^2.37.1",
+    "@sveltejs/vite-plugin-svelte": "^6.1.4",
     "autoprefixer": "^10.4.21",
     "debounce": "^1.2.1",
     "dotenv": "^8.6.0",
@@ -35,7 +36,7 @@
     "postcss": "^8.5.6",
     "qs": "^6.14.0",
     "slate": "^0.87.0",
-    "svelte": "^3.59.2",
+    "svelte": "^5.38.7",
     "svelte-check": "^3.8.6",
     "svelte-notifications": "^0.9.98",
     "vite-imagetools": "^4.0.19",
